--- a/src/styles/_local_normalize.scss
+++ b/src/styles/_local_normalize.scss
@@ -27,10 +27,9 @@ a {
   &:hover { text-decoration: underline; }
 }
 
-
-// Give paragraphs slightly more head room
+// Give paragraphs slightly more legroom
 p {
-  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 // Heading sizes
